# astro-engine

04_key_presses/: 04_key_presses.cpp  04_key_pressesexe
05_optimized_surface_loading_and_soft_stretching/: 05_optimized_surface_loading_and_soft_stretching.cpp
07_texture_loading_and_rendering/: 07_texture_loading_and_rendering.cpp
26_motion/: 26_motion.cpp
astro/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
astro-main/: build.sh
astro-main/include/: AnimatedSprite.hpp  ResourceManager.hpp
astro-main/src/: AnimatedSprite.cpp  ResourceManager.cpp
